updated portfolio piece pages

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -120,8 +120,8 @@ body {
 
 .about-section {
     padding-top: 1.75em;
-    padding-left: 3em;
-    padding-right: 3em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
 }
 
 .bio-title {
@@ -225,6 +225,70 @@ body {
     padding-bottom: .5em;
 }
 
+/* Portfolio Pieces -- Mobile */
+
+    .pp-back-button {
+        float: top;
+        position: relative;
+        height: 1em;
+        margin-top: 2em;
+        margin-left: 1em;
+    }
+
+    .pp-main-title {
+        font-family: 'Poiret One', sans-serif;
+        text-transform: uppercase;
+        font-size: 2.25em;
+        color: #8c6f4b;
+        letter-spacing: .2em;
+        margin-right: .5em;
+        margin-left: .5em;
+        margin-top: 1em;
+    }
+
+    .pp-sub-title {
+        font-family: 'Raleway', sans-serif;
+        text-transform: uppercase;
+        font-size: 1em;
+        letter-spacing: .2em;
+        margin-bottom: 2.25em;
+        margin-top: -.75em;
+    }
+
+    hr {
+        border: 0;
+        border-bottom: 1px dotted #fff;
+        background: #000;
+        margin-left: 1.5em;
+        margin-right: 1.5em;
+    }
+
+    .pp-desc-section {
+        margin-bottom: 3.5em;
+    }
+
+    .pp-title {
+        font-family: 'Poiret One', sans-serif;
+        font-size: 1.25em;
+        text-transform: uppercase;
+        color: #559cb4;
+        letter-spacing: .2em;
+        margin-top: 2em;
+    }
+
+    .pp-body-copy {
+        font-family: 'Raleway', sans-serif;
+        line-height: 1.5em;
+        margin-right: 1em;
+        margin-left: 1em;
+        margin-top: -1em;
+    }
+
+    .pp-process-images {
+        margin-bottom: -.25em;
+        width: 100%;
+    }
+
 @media only screen and (min-width: 30em) /* LANDSCAPE - MOBILE */ {
    
     .about-section {
@@ -275,8 +339,6 @@ body {
     .skill-icons-placement {
         display: inline-block;
         position: relative;
-        margin-left: .25em;
-        margin-right: .25em;
     }
     
     .icons {
@@ -291,6 +353,71 @@ body {
         font-family: 'Raleway', sans-serif;
         padding-bottom: 2em;
         text-align: center;
+    }
+    
+    /* Portfolio Pieces -- Tablet */
+
+    .pp-back-button {
+        float: left;
+        position: relative;
+        height: 1.25em;
+        margin-top: 1em;
+        margin-left: 2em;
+    }
+
+    .pp-main-title {
+        font-family: 'Poiret One', sans-serif;
+        text-transform: uppercase;
+        font-size: 2.25em;
+        color: #8c6f4b;
+        letter-spacing: .2em;
+        margin-right: .5em;
+        margin-left: .5em;
+
+    }
+
+    .pp-sub-title {
+        font-family: 'Raleway', sans-serif;
+        text-transform: uppercase;
+        font-size: 1em;
+        letter-spacing: .2em;
+        margin-bottom: 2.25em;
+        margin-top: -.75em;
+    }
+
+    hr {
+        border: 0;
+        border-bottom: 1px dotted #fff;
+        background: #000;
+        margin-left: 4.5em;
+        margin-right: 4.5em;
+    }
+
+    .pp-desc-section {
+        margin-bottom: 3.5em;
+    }
+
+    .pp-title {
+        font-family: 'Poiret One', sans-serif;
+        font-size: 1.25em;
+        text-transform: uppercase;
+        color: #559cb4;
+        letter-spacing: .2em;
+        margin-top: 2em;
+    }
+
+    .pp-body-copy {
+        font-family: 'Raleway', sans-serif;
+        line-height: 1.5em;
+        margin-right: 6em;
+        margin-left: 6em;
+        margin-top: -1em;
+    }
+
+    .pp-process-images {
+        width: 33.3333%;
+        display: inline-block;
+        float: left;
     }
 }
 
@@ -376,7 +503,7 @@ body {
     .billboard-text {
         font-size: 5em;
         width: 60%;
-        border: 2px solid ##8c6f4b;
+        border: 2px solid #8c6f4b;
         top: 5.25em;
         -webkit-transform: translateY(-50%);
         -moz-transform: translateY(-50);
@@ -403,8 +530,67 @@ body {
         padding-bottom: 2em;
         text-align: center;
     }
+
+    /* Portfolio Pieces -- Desktop */
+
+    .pp-back-button {
+        float: left;
+        position: relative;
+        height: 1.25em;
+        margin-top: .25em;
+        margin-left: 2em;
+    }
+
+    .pp-main-title {
+        font-family: 'Poiret One', sans-serif;
+        text-transform: uppercase;
+        font-size: 2.25em;
+        color: #8c6f4b;
+        letter-spacing: .2em;
+        margin-right: .5em;
+        margin-left: .5em;
+    }
+
+    .pp-sub-title {
+        font-family: 'Raleway', sans-serif;
+        text-transform: uppercase;
+        font-size: 1em;
+        letter-spacing: .2em;
+        margin-bottom: 2.25em;
+        margin-top: -.75em;
+    }
+
+    hr {
+        border: 0;
+        border-bottom: 1px dotted #fff;
+        background: #000;
+        margin-left: 12em;
+        margin-right: 12em;
+    }
+
+    .pp-desc-section {
+        margin-bottom: 3.5em;
+    }
+
+    .pp-title {
+        font-family: 'Poiret One', sans-serif;
+        font-size: 1.25em;
+        text-transform: uppercase;
+        color: #559cb4;
+        letter-spacing: .2em;
+        margin-top: 2em;
+    }
+
+    .pp-body-copy {
+        font-family: 'Raleway', sans-serif;
+        line-height: 1.5em;
+        margin-top: -1em;
+        display: inline-block;
+        width: 33.3333%;
+    }
+
+    .pp-process-images {
+        width: 33.3333%;
+        display: inline-block;
+    }
 }
-
-/* Portfolio Pieces */
-
-    
