--- a/_layouts/portfolio-default.html
+++ b/_layouts/portfolio-default.html
@@ -6,7 +6,7 @@
     <meta name="handheldfriendly" content="true">
     <meta name="mobileoptimized" content="240">
     <meta name="viewport" content="width=device-width; initial-scale=1">
-    <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
+    <link href="{{site.baseurl}}/css/portfolio.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 </head>
@@ -19,9 +19,9 @@
                 <a href="mailto:hey@emilylavinskas.ca?Subject=Hi There!" target="_top" class="email">hey@emilylavinskas.ca</a>
             </div>
             <div class="contact-icons">
-                <a href="http://behance.net/emilycmyk"><img class="sm-icon" src="images/behance-icon.svg" alt="behance icon"></a>
-                <a href="https://ca.linkedin.com/in/emilylavinskas"><img class="sm-icon" src="images/linkedin-icon.svg" alt="linkedin icon"></a>
-                <a href="http://instagram.com/hey.imemily"><img class="sm-icon" src="images/instagram-icon.svg" alt="instagram icon"></a> 
+                <a href="{{site.baseurl}}/http://behance.net/emilycmyk"><img class="sm-icon" src="{{site.baseurl}}/images/behance-icon.svg{{image}}" alt="behance icon"></a>
+                <a href="{{site.baseurl}}/https://ca.linkedin.com/in/emilylavinskas"><img class="sm-icon" src="{{site.baseurl}}/images/linkedin-icon.svg{{image}}" alt="linkedin icon"></a>
+                <a href="{{site.baseurl}}/http://instagram.com/hey.imemily"><img class="sm-icon" src="{{site.baseurl}}/images/instagram-icon.svg{{image}}" alt="instagram icon"></a> 
             </div>
         
 <footer class="footer-info">
