--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -361,6 +361,7 @@ body {
         position: relative;
         height: 1.25em;
         margin-top: 1em;
+        margin-left: 1em;
     }
 
     .pp-main-title {
