--- a/_layouts/portfolio-default.html
+++ b/_layouts/portfolio-default.html
@@ -25,5 +25,6 @@
             </div>
         
 <footer class="footer-info">
+    <a class="back-top" href="#top"><img class="back-top" src="{{site.baseurl}}/images/back-top.svg{{image}}" alt="back to top button"></a>
     <p>Copyright &copy; Emily Lavinskas 2015</p>       
 </footer>
