--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -75,6 +75,7 @@ body {
     padding-top: 1.1em;
     padding-right: 1.5em;
     margin: 0 auto;
+    font-size: .6em;
 }
 
 .nav a,
@@ -260,18 +261,6 @@ body {
 
 /* Portfolio Pieces -- Mobile */
 
-.nav li {
-    font-family: 'Poiret One', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: .2em;
-    display: inline-block;
-    text-decoration: none;
-    padding-top: 1.1em;
-    padding-right: 1.5em;
-    margin: 0 auto;
-    font-size: .75em;
-}
-
 .pp-back-button {
     float: top;
     position: relative;
@@ -347,6 +336,10 @@ hr {
 
 @media only screen and (min-width: 48em) /* TABLET */ {
 
+    .nav li {
+        font-size: 1em;
+    }
+    
     .wordmark {
         position: absolute;
         height: 3em;
@@ -479,6 +472,11 @@ hr {
 
 
 @media only screen and (min-width: 72em) /* DESKTOP */ {
+    
+     .nav li {
+        font-size: 1em;
+    }
+    
     
     .wordmark {
         position: absolute;
