--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -605,10 +605,10 @@ hr {
 /* 404 CSS */
 
 .page-404 {
-    background-color: #97bccd;
+    color: #97bccd;
 }
-.title-404 {
-    text-align: center;
-    font-size: 6em;
-    font-family: sans-serif;
+
+.return-home {
+    font-family: 'Raleway', sans-serif;
 }
+    
