fixed images for web

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,6 @@
     {{content}}
 
 <footer class="footer-info">
-    <a class="back-top" href="#top"><img class="back-top" src="{{site.baseurl}}/images/back-top.svg{{image}}" alt="back to top button"></a>
+    <a class="back-top" href="#top"><img class="fade back-top" src="{{site.baseurl}}/images/back-top.svg{{image}}" alt="back to top button"></a>
     <p>Copyright &copy; Emily Lavinskas 2016</p>       
 </footer>
