--- a/_layouts/portfolio-default.html
+++ b/_layouts/portfolio-default.html
@@ -16,15 +16,15 @@
     <div class="contact-section" id="contact">
         <h2 class="contact-title">Impressed? Let's talk.</h2>
             <div class="email-div-wrap">
-                <a href="mailto:hey@emilylavinskas.ca?Subject=Hi There!" target="_top" class="email">hey@emilylavinskas.ca</a>
+                <a href="mailto:hey@emilylavinskas.ca?Subject=Hi There!" target="_top" class="email fade">hey@emilylavinskas.ca</a>
             </div>
             <div class="contact-icons">
-                <a href="http://behance.net/emilycmyk"><img class="sm-icon" src="{{site.baseurl}}/images/behance-icon.svg{{image}}" alt="behance"></a>
-                <a href="https://ca.linkedin.com/in/emilylavinskas"><img class="sm-icon" src="{{site.baseurl}}/images/linkedin-icon.svg{{image}}" alt="linkedin"></a>
-                <a href="http://instagram.com/hey.imemily"><img class="sm-icon" src="{{site.baseurl}}/images/instagram-icon.svg{{image}}" alt="instagram"></a> 
+                <a href="http://behance.net/emilycmyk"><img class="sm-icon fade" src="{{site.baseurl}}/images/behance-icon.svg{{image}}" alt="behance"></a>
+                <a href="https://ca.linkedin.com/in/emilylavinskas"><img class="sm-icon fade" src="{{site.baseurl}}/images/linkedin-icon.svg{{image}}" alt="linkedin"></a>
+                <a href="http://instagram.com/hey.imemily"><img class="sm-icon fade" src="{{site.baseurl}}/images/instagram-icon.svg{{image}}" alt="instagram"></a> 
             </div>
         
 <footer class="footer-info">
-    <a class="back-top" href="#top"><img class="back-top" src="{{site.baseurl}}/images/back-top.svg{{image}}" alt="back to top button"></a>
+    <a class="back-top" href="#top"><img class="fade back-top" src="{{site.baseurl}}/images/back-top.svg{{image}}" alt="back to top button"></a>
     <p>Copyright &copy; Emily Lavinskas 2016</p>       
 </footer>
