--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -689,3 +689,14 @@ hr {
     font-family: 'Raleway', sans-serif;
     display: inline-block;
 }
+
+.fade {
+   opacity: 1;
+   transition: opacity .25s ease-in-out;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
+   }
+
+.fade:hover {
+  opacity: 0.5;
+}
