added smooth scroll?

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,3 +17,5 @@
     <a class="back-top" href="#top"><img class="fade back-top" src="{{site.baseurl}}/images/back-top.svg{{image}}" alt="back to top button"></a>
     <p>Copyright &copy; Emily Lavinskas 2016</p>       
 </footer>
+    
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.0/jquery.scrollTo.min.js"></script>
