--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,3 +19,4 @@
 </footer>
     
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.0/jquery.scrollTo.min.js"></script>
+    <script src="js/main.js"></script>
