--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     {{content}}
 
 <footer class="footer-info">
-    <a class="back-top" href="#top"><img class="fade scrollup" src="{{site.baseurl}}/images/back-top.svg{{image}}" alt="back to top button"></a>
+    <a class="back-top" href="#up"><img class="fade scrollup" src="{{site.baseurl}}/images/back-top.svg{{image}}" alt="back to top button"></a>
     <p>Copyright &copy; Emily Lavinskas 2016</p>       
 </footer>
     
