--- a/_layouts/portfolio-default.html
+++ b/_layouts/portfolio-default.html
@@ -25,6 +25,6 @@
             </div>
         
 <footer class="footer-info">
-    <a class="scrollup" href="#up"><img class="fade back-top" src="{{site.baseurl}}/images/back-top.svg{{image}}" alt="back to top button"></a>
+    <a class="back-top" href="#top"><img class="fade back-top" src="{{site.baseurl}}/images/back-top.svg{{image}}" alt="back to top button"></a>
     <p>Copyright &copy; Emily Lavinskas 2016</p>       
 </footer>
