--- a/_layouts/portfolio-default.html
+++ b/_layouts/portfolio-default.html
@@ -14,7 +14,7 @@
     {{content}}
     
     <div class="contact-section" id="contact">
-        <h2 class="contact-title">Impressed? Let's work together.</h2>
+        <h2 class="contact-title">Impressed? Let's get in touch.</h2>
             <div class="email-div-wrap">
                 <a href="mailto:hey@emilylavinskas.ca?Subject=Hi There!" target="_top" class="email fade">hey@emilylavinskas.ca</a>
             </div>
