--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -767,3 +767,10 @@ hr {
 
   color: #fff;
 }
+
+@media only screen and (min-width: 110em) {
+    .pp-process-images {
+        width: 33.3333%;
+        display: inline-block;
+    }
+}
