--- a/_layouts/portfolio-default.html
+++ b/_layouts/portfolio-default.html
@@ -21,7 +21,7 @@
             <div class="contact-icons">
                 <a href="http://behance.net/emilycmyk"><img class="sm-icon fade" src="{{site.baseurl}}/images/behance-icon.svg{{image}}" alt="behance"></a>
                 <a href="https://ca.linkedin.com/in/emilylavinskas"><img class="sm-icon fade" src="{{site.baseurl}}/images/linkedin-icon.svg{{image}}" alt="linkedin"></a>
-                <a href="http://instagram.com/hey.imemily"><img class="sm-icon fade" src="{{site.baseurl}}/images/instagram-icon.svg{{image}}" alt="instagram"></a> 
+               <!--  <a href="http://instagram.com/hey.imemily"><img class="sm-icon fade" src="{{site.baseurl}}/images/instagram-icon.svg{{image}}" alt="instagram"></a> -->
             </div>
         
 <footer class="footer-info">
